gccida/c0/variable_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/variable_section/src/varasm.c:1106:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)decl->real_cst.real_cst.r[2], 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/variable_section/src/varasm.c:1106:18: error: expected expression
( machine_mode)( unsigned __int8)decl->real_cst.real_cst.r[2], 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/variable_section/src/obj/varasm.o] Error 1
